[gd_scene load_steps=28 format=3 uid="uid://c7c3x0bka3wot"]

[ext_resource type="Script" path="res://Scripts/EnmyState.gd" id="1_p4oeg"]
[ext_resource type="Texture2D" uid="uid://x5t733pu1cnj" path="res://Assets/Monster/Enemy.png" id="2_vxusq"]
[ext_resource type="Script" path="res://Scripts/Enemy StateMachine/StateMachine.gd" id="3_16k50"]
[ext_resource type="Script" path="res://Scripts/Enemy StateMachine/Chase.gd" id="4_61gv0"]
[ext_resource type="Script" path="res://Scripts/Enemy StateMachine/Patrol.gd" id="5_imk81"]
[ext_resource type="AudioStream" uid="uid://0uvmscxs2dou" path="res://Assets/Audio/enemy notice.wav" id="5_tymcq"]
[ext_resource type="Script" path="res://Scripts/Enemy StateMachine/Attack.gd" id="6_tavy4"]
[ext_resource type="AudioStream" uid="uid://boa1l6ykuftk4" path="res://Assets/Audio/enemy patrol.wav" id="7_gv5bh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_75km3"]
atlas = ExtResource("2_vxusq")
region = Rect2(189, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_isq8x"]
atlas = ExtResource("2_vxusq")
region = Rect2(189, 64, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfn2l"]
atlas = ExtResource("2_vxusq")
region = Rect2(189, 128, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cwxb"]
atlas = ExtResource("2_vxusq")
region = Rect2(189, 192, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmayp"]
atlas = ExtResource("2_vxusq")
region = Rect2(0, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iab7t"]
atlas = ExtResource("2_vxusq")
region = Rect2(0, 64, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruiqo"]
atlas = ExtResource("2_vxusq")
region = Rect2(0, 128, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj61s"]
atlas = ExtResource("2_vxusq")
region = Rect2(0, 192, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pm3m"]
atlas = ExtResource("2_vxusq")
region = Rect2(63, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dq3u"]
atlas = ExtResource("2_vxusq")
region = Rect2(63, 64, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o786g"]
atlas = ExtResource("2_vxusq")
region = Rect2(63, 128, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8pgb"]
atlas = ExtResource("2_vxusq")
region = Rect2(63, 192, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_evqmc"]
atlas = ExtResource("2_vxusq")
region = Rect2(126, 0, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmh7m"]
atlas = ExtResource("2_vxusq")
region = Rect2(126, 64, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0wbl"]
atlas = ExtResource("2_vxusq")
region = Rect2(126, 128, 63, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hag1t"]
atlas = ExtResource("2_vxusq")
region = Rect2(126, 192, 63, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_e1bqp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75km3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isq8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfn2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cwxb")
}],
"loop": true,
"name": &"Bottom",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmayp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iab7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruiqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj61s")
}],
"loop": true,
"name": &"Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pm3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dq3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o786g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8pgb")
}],
"loop": true,
"name": &"Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_evqmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmh7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0wbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hag1t")
}],
"loop": true,
"name": &"Top",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xtp76"]
radius = 23.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7wk3w"]
radius = 37.53

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("enemy", "animator", "ray_cast")]
script = ExtResource("1_p4oeg")
enemy = NodePath(".")
animator = NodePath("AnimatedSprite2D")
ray_cast = NodePath("RayCast2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_e1bqp")
animation = &"Bottom"
frame_progress = 0.787689
offset = Vector2(-8, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xtp76")
disabled = true

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_7wk3w")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_16k50")
initial_state = NodePath("Patrol")

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "animator", "ray_cast")]
script = ExtResource("4_61gv0")
enemy = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
ray_cast = NodePath("../../RayCast2D")

[node name="EnemyNoticePlayer" type="AudioStreamPlayer" parent="StateMachine/Chase"]
stream = ExtResource("5_tymcq")

[node name="Patrol" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "animator", "ray_cast")]
script = ExtResource("5_imk81")
enemy = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
ray_cast = NodePath("../../RayCast2D")

[node name="PatrolSoundPlayer" type="Timer" parent="StateMachine/Patrol"]
wait_time = 4.0

[node name="EnemyPatrolPlayer" type="AudioStreamPlayer2D" parent="StateMachine/Patrol"]
stream = ExtResource("7_gv5bh")
max_distance = 300.0

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("AttackHitCooldown", "enemy", "animator", "ray_cast")]
script = ExtResource("6_tavy4")
AttackHitCooldown = NodePath("../../AttackHitCooldown")
enemy = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
ray_cast = NodePath("../../RayCast2D")

[node name="AttackHitCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="RayCast2D" type="RayCast2D" parent="."]

[connection signal="area_entered" from="detection_area" to="StateMachine/Patrol" method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="detection_area" to="." method="_on_detection_area_area_exited"]
[connection signal="area_exited" from="detection_area" to="StateMachine/Chase" method="_on_detection_area_area_exited"]
[connection signal="body_entered" from="detection_area" to="StateMachine/Chase" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="StateMachine/Attack" method="_on_detection_area_body_exited"]
[connection signal="timeout" from="StateMachine/Patrol/PatrolSoundPlayer" to="StateMachine/Patrol" method="_on_patrol_sound_player_timeout"]
[connection signal="timeout" from="AttackHitCooldown" to="StateMachine/Attack" method="_on_attack_hit_cooldown_timeout"]
